--- a/29644-h/29644-h.htm
+++ b/29644-h/29644-h.htm
@@ -8528,7 +8528,7 @@ They gave me command of a trawler, a perfectly beastly kind of boat.
 Been hunting the submarines ever since. Infernal dull job. Heard this
 fellow was mouching around but couldn&#8217;t find him. Guessed he&#8217;d want
 supplies sooner or later. Remembered that cave and made a bee line for
-Salissa. Never was no pleased in my life as when I caught sight of
+Salissa. Never so pleased in my life as when I caught sight of
 him. But there was such a sea running that we couldn&#8217;t shoot for nuts.
 Had to wait till we got inside. Sunk him then. That&#8217;s all there is to
 tell.&#8221;</p>
